...
<p>Wenn Sie Fragen, Feedback oder Anregungen zu dem Projekt haben, kontaktieren sie uns bitte unter <a href="info@trackyourstress.org."</a> </p>]]>
    </string>
    <string name="Back">Zurück</string>
    <string name="notify401"> Zugangsdaten ungültig. Bitte überprüfen Sie Ihre Eingaben </string>
    <string name="notify403">Nutzer wurde noch nicht verifiziert.</string>
    <string name="password_short">Passwort zu kurz. Bitte versuchen Sie es noch einmal</string>
    <string name="network_error">Netzwerk-Fehler aufgetreten. Überprüfen Sie Ihre Internetverbindung</string>
    <string name="profile_not_loaded">Profildaten können nicht geladen werden</string>
    <string name="daily_notifications_off">Tägliche Benachrichtigungen AUS</string>
    <string name="monthly_notifications_off">Monatliche Benachrichtigungen AUS</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="not_applicable">Nicht zutreffend</string>
...
